<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stach.app_test.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_settings"
            android:contentDescription="@string/icon_profile" />
        <!--Only for padding-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--Password field-->
        <EditText
            android:id="@+id/oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:hint="@string/prompt_password"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
        <!--Password field-->
        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
        <!--Password field-->
        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_pass_repeate_signUp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:text="@string/changePassword"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:onClick="sendDataChangePassword"/>
        <!--Only for padding-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!--button for login-->
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

