<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stach.app_test.FindYourParkingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_maps"
            android:contentDescription="@string/icon_profile" />
        <!--Only for padding-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--Inserisci la città in cui vuoi cercare parcheggio-->
        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
        <!--Only for padding-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--money-->
        <TextView
            android:id="@+id/text_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_or"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
        <!--Only for padding-->
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnFindLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/yourPosition"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!--button for login-->
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
