<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context="com.example.stach.app_test.LoginActivity">

            <ImageView
                android:id="@+id/unicamPark"
                android:layout_width="match_parent"
                app:srcCompat="@mipmap/ic_logo_park"
                android:layout_height="80dp"/>
            <!--Only for padding-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--user email-->
            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:hint="username o email"
                android:inputType="textEmailAddress" />
            <!--password-->
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />
            <!--Only for padding-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--button for login-->
            <!--per cambiare il colore del bottone vai su rounderBUTTON-->
            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:onClick="sendDataForLogin"
                android:text="@string/btn_login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal" />
            <!--button for credentials-->
            <Button
                android:id="@+id/btnCredential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/btn_credentials"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="normal" />
            <!--button for signup-->
            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background = "@drawable/roundedbutton"
                android:onClick="goToSignUp"
                android:text="@string/btn_to_signUp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <!--Only for padding-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--button for map-->
            <Button
                android:id="@+id/btn_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton"
                android:onClick="goToMap"
                android:text="@string/btn_to_map"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
